[package]
name = "comboom_punkt_sucht_app"
version = "0.0.1"
description = "comboom.sucht"
authors = ["mcpeaps_HD", "comboom.sucht"]
edition = "2021"
homepage = "https//comboompunksucht.app"
repository = "https://github.com/comboomPunkTsucht/comboom.sucht-BLOG"
readme = "../README.md"
license-file = "../LICENSE.md"
license = "MIT"
categories = ["gui", "hardware-support", "multimedia", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "comboom_punkt_sucht_app_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-rc", features = [] }

[dependencies]
tauri = { version = "2.0.0-rc", features = ["macos-private-api"] }
tauri-plugin-shell = "2.0.0-rc"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = "4.5.16"
